test/1.2/errors/T_ESYNTAX_14.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
import "testing.dml";

// UTF-8 in error message

parameter documentation = "Address Mapping, VTd, Ctrl/Status, Misc unit in the " 
    /// ERROR ESYNTAX
    "Intel® X58 Express Chipset.";
